# src/main/java/dev/toannv/interview/walk/web/rest/RankingV1Controller.java
@@ -1,27 +1,23 @@
 package dev.toannv.interview.walk.web.rest;
 
+import dev.toannv.interview.walk.service.ranking.IRankingService;
 import dev.toannv.interview.walk.web.api.RankingV1ApiDelegate;
 import dev.toannv.interview.walk.web.api.model.GetRankingByDateResponse;
 import dev.toannv.interview.walk.web.api.model.GetRankingCriteria;
 import lombok.RequiredArgsConstructor;
-import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RestController;
 
-import java.time.LocalDate;
-import java.util.Objects;
 
 @RestController
 @RequiredArgsConstructor
 public class RankingV1Controller implements RankingV1ApiDelegate {
 
-    @Override
-    public ResponseEntity<GetRankingByDateResponse> getRankingByDate(GetRankingCriteria criteria) {
-        if (Objects.isNull(criteria.getDate())) {
-            criteria.setDate(LocalDate.now());
-        }
+    private final IRankingService rankingService;
 
-        return new ResponseEntity<>(HttpStatus.NOT_IMPLEMENTED);
+    @Override
+    public ResponseEntity<GetRankingByDateResponse> getRankingByCurrentDate(GetRankingCriteria criteria) {
+        return ResponseEntity.ok(rankingService.getDailyRanking(criteria));
     }
 
 }
